Add api - object_profile favoris
